# thinstation

./: .gitignore  README  README.md  build  index.html  list  params.json  setup-chroot
.github/: FUNDING.yml
javascripts/: jquery.scrollbox.js
stylesheets/: styles.css  stylesheet.css
ts/: TS_ENV  systemd-dependent-packages
ts/5.0/: build  build.conf.example  exclusions  mkmachine  thinstation.hosts.example
ts/5.0/prebuilt/tools/installjammer/lib/BWidget/: ChangeLog  Makefile.in  arrow.tcl  button.tcl  buttonbox.tcl  calendar.tcl  choosedir.tcl  choosefile.tcl  color.tcl  combobox.tcl  configure.in  dialog.tcl  dragsite.tcl  drawerpanel.tcl  dropsite.tcl  dynhelp.tcl  entry.tcl  font.tcl  icons.tcl  init.tcl  label.tcl  labelentry.tcl  labelframe.tcl  license.txt  listbox.tcl  mainframe.tcl  messagedlg.tcl  notebook.tcl  optiontree.tcl  pagesmgr.tcl  panedw.tcl  panelframe.tcl  passwddlg.tcl  pkgIndex.tcl  preferences.tcl  progressbar.tcl  progressdlg.tcl  properties.tcl  readme.txt  scrollframe.tcl  (+17 more)
ts/5.0/prebuilt/tools/installjammer/lib/BWidget/images/: BWidget.gif.tkico  BWidget.png.tkico  minus.xbm  opcopy.xbm  oplink.xbm  opmove.xbm  plus.xbm  target.xbm
ts/5.0/prebuilt/tools/installjammer/lib/BWidget/lang/: en.rc  es.rc  fr.rc  hu.rc
ts/5.1/: build  build.conf.example  build.urls  libfbsplash.so.1  libfbsplashrender.so.1  thinstation.conf.buildtime
ts/5.2/: build  build.conf.example  build.urls  thinstation.conf.sample
ts/6.0/: build  build.conf.example  build.urls
ts/certs/: ThinStation Platform Key.cer  ThinStation-KEK-CA.cer  (+3 more)
ts/etc/: issue  (+6 more)
(+14179 files in other folders)
